Multiple fixes (#211)
* Fix horizontal scroll

* Attempt 2

* Fix merge issue

* Do not display right column if it's empty

* Fix editor width on empty page

* A fix

* Consider padding when calculating main column margin left

* Mobile layout fix

* Fix main column width in edit mode

* Edit mode content width fix

* Add comments

--- a/src/frontend/styles/components/writing.pcss
+++ b/src/frontend/styles/components/writing.pcss
@@ -91,6 +91,13 @@
   .tc-cell {
     padding: 6px 8px;
   }
+
+  @media (--desktop) {
+    .ce-block__content,
+    .ce-toolbar__content {
+      max-width: var(--layout-width-main-col);
+    }
+  }
 }
 
 .codex-editor__redactor .ce-block:first-of-type .ce-header {
